--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -14,7 +14,7 @@ li { list-style: none; }
 /* Header Css [Start] */
 /* main header */
 .app-header {
-    background-color: #272829;
+    background-color: #352F44;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -90,13 +90,13 @@ li { list-style: none; }
     height: 1080px;
     display: flex;
     flex-direction: row;
+    background-color: #B9B4C7;
 }
 
 
 
 /* Sidebar Css [Start] */
 .sidebar {
-    background-color: #61677A;
     width: 15%;
     height: 100%;
     display: flex;
@@ -107,7 +107,7 @@ li { list-style: none; }
     font-size: 1.2rem;
     font-weight: 900;
     padding: 0rem 0rem 1rem 0rem;
-    border-bottom: 2px solid #a2a7b799;
+    border-bottom: 2px solid #2e364f99;
     margin: 1rem 2rem 0rem 2rem;
 }
 
@@ -122,13 +122,25 @@ li { list-style: none; }
 }
 
 .sidebar > section > ul > li {
-    padding: 0rem 0rem 0rem 2rem;
-    margin: 0rem 0rem 1.3rem 0rem;
+    padding: 0rem 0.5rem 0.5rem 0.5rem;
+    margin: 0rem 1.5rem 1.3rem 1.5rem;
     cursor: pointer;
+    position: relative;
+    z-index: 1;
 }
 .sidebar > section > ul > li > span {
     margin: 0rem 0rem 0rem 0.5rem;
     font-weight: 700;
+    display: inline;
+    position: relative;
+    z-index: -1;
+}
+#text-underbar {
+    display: none;
+    border: 2px solid black;
+    position: absolute;
+    transition: 0.5s;
+    border-radius: 10px;
 }
 /* Sidebar Css [End] */
 
@@ -136,7 +148,6 @@ li { list-style: none; }
 
 /* Content Css [Start] */
 .content-main {
-    background-color: #FFF6E0;
     flex-grow: 1;
 }
 /* Content Css [End] */
