--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -107,6 +107,7 @@ li { list-style: none; }
 /* Sidebar Css [Start] */
 .sidebar {
     width: 15%;
+    min-width: 150px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -150,7 +151,7 @@ li { list-style: none; }
     display: none;
     border: 2px solid black;
     position: absolute;
-    transition: 0.5s;
+    transition: 0.2s;
     border-radius: 10px;
 }
 /* Sidebar Css [End] */
