--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -3,7 +3,10 @@ ul { padding: 0; margin: 0; }
 li { list-style: none; }
 .App { 
     max-width: 1920px;
-    min-width: 769px
+    min-width: 769px;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 1fr 10fr;
  }
 
  /* ==================================================
@@ -96,7 +99,7 @@ li { list-style: none; }
 ================================================== */
 .app-main {
     width: 100%;
-    height: 1080px;
+    height: 100%;
     display: flex;
     flex-direction: row;
     background-color: #B9B4C7;
@@ -120,7 +123,7 @@ li { list-style: none; }
     font-weight: 900;
     padding: 0rem 0rem 1rem 0rem;
     border-bottom: 2px solid #2e364f99;
-    margin: 1rem 2rem 0rem 2rem;
+    margin: 1rem 2rem 0rem 1.5rem;
 }
 
 .sidebar > section {
@@ -163,17 +166,30 @@ li { list-style: none; }
     flex-grow: 1;
 }
 
-#calendar {
+.calendar {
+    width: 100%;
+    max-width: 1000px;
+    min-width: 150px;
+    margin: 10px 10px;
+}
+.calendar-header {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 10px;
+}
+.calendar-header a {
+    margin: 0 10px;
+}
+.calendar-content {
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     gap: 10px;
-    width: 80%;
-    max-width: 600px;
-    margin: 10px 10px;
 }
-
 .daily {
-    width: 150px;
+    width: 100%;
     margin: 5px 5px;
     overflow: hidden;
     text-overflow: ellipsis;
