--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -185,7 +185,7 @@ li { list-style: none; }
     min-width: 20px;
     margin: 0 10px;
 }
-.calendar-header input[type="date"] {
+.calendar-header input[type="month"] {
     border: none;
     font-size: 16px;
     font-weight: bold;
