--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -218,29 +218,47 @@ li { list-style: none; }
     align-items: center;
     justify-content: center;
 }
-  .modal-content {
+.modal-content {
     background: white;
     padding: 20px;
     border-radius: 10px;
     width: 300px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
-  .modal-content h2 {
+.modal-content h2 {
     margin-top: 0;
 }  
-  .modal-content label {
+.modal-content label {
     display: block;
     margin: 15px 0;
 }
-  .modal-content textarea {
+.modal-content textarea {
     width: 100%;
     height: 80px;
 }  
-  .modal-content button {
+.modal-content button {
     margin-right: 10px;
 }
-  
 /* Content Css [End] */
+
+
+
+
+/* Timeline Css [Start] */
+.timeline {
+    background-color: red;
+    width: 100%;
+    
+}
+.timeline .picture {
+    background-color: aqua;
+
+}
+.timeline .note-title {
+    background-color: #b8b4c5;
+
+}
+/* Timeline Css [End] */
 
 
 /* ==================================================
