--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,21 +1,167 @@
-.lgn-img {
-    content: url("../images/img-01.png")
+.App { 
+    max-width: 1920px;
+    min-width: 769px;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 1fr 10fr;
+}
+  
+/*//////////////////////////////////////////////////////////////////
+[ FONT ]*/
+  
+@font-face {
+    font-family: Poppins-Regular;
+    src: url('../fonts/poppins/Poppins-Regular.ttf');
+}
+  
+@font-face {
+    font-family: Poppins-Bold;
+    src: url('../fonts/poppins/Poppins-Bold.ttf'); 
 }
 
-/* ==================================================
-    
-    app-header
-    
-================================================== */
+@font-face {
+    font-family: Poppins-Medium;
+    src: url('../fonts/poppins/Poppins-Medium.ttf'); 
+}
 
-/* Header Css [Start] */
-/* main header */
+@font-face {
+    font-family: Montserrat-Bold;
+    src: url('../fonts/montserrat/Montserrat-Bold.ttf'); 
+}
+  
+  /*//////////////////////////////////////////////////////////////////
+  [ RESTYLE TAG ]*/
+  
+* {
+    margin: 0px; 
+    padding: 0px; 
+    box-sizing: border-box;
+}
+  
+body, html {
+    height: 100%;
+    font-family: Poppins-Regular, sans-serif;
+}
+  
+  /*---------------------------------------------*/
+  a {
+    font-family: Poppins-Regular;
+    font-size: 14px;
+    line-height: 1.7;
+    color: #666666;
+    margin: 0px;
+    transition: all 0.4s;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+}
+  
+a:focus {
+    outline: none !important;
+}
+  
+a:hover {
+    text-decoration: none;
+    color: #57b846;
+}
+  
+/*---------------------------------------------*/
+h1,h2,h3,h4,h5,h6 {
+    margin: 0px;
+}
+  
+p {
+    font-family: Poppins-Regular;
+    font-size: 14px;
+    line-height: 1.7;
+    color: #666666;
+    margin: 0px;
+}
+
+ul, li {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+  
+  
+  /*---------------------------------------------*/
+input {
+    outline: none;
+    border: none;
+}
+
+textarea {
+    outline: none;
+    border: none;
+}
+
+textarea:focus, input:focus {
+    border-color: transparent !important;
+}
+
+input:focus::-webkit-input-placeholder { color:transparent; }
+input:focus:-moz-placeholder { color:transparent; }
+input:focus::-moz-placeholder { color:transparent; }
+input:focus:-ms-input-placeholder { color:transparent; }
+
+textarea:focus::-webkit-input-placeholder { color:transparent; }
+textarea:focus:-moz-placeholder { color:transparent; }
+textarea:focus::-moz-placeholder { color:transparent; }
+textarea:focus:-ms-input-placeholder { color:transparent; }
+
+input::-webkit-input-placeholder { color: #999999; }
+input:-moz-placeholder { color: #999999; }
+input::-moz-placeholder { color: #999999; }
+input:-ms-input-placeholder { color: #999999; }
+
+textarea::-webkit-input-placeholder { color: #999999; }
+textarea:-moz-placeholder { color: #999999; }
+textarea::-moz-placeholder { color: #999999; }
+textarea:-ms-input-placeholder { color: #999999; }
+  
+/*---------------------------------------------*/
+button {
+    outline: none !important;
+    border: none;
+    background: transparent;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+iframe {
+    border: none !important;
+}
+  
+  
+/*//////////////////////////////////////////////////////////////////
+[ Utility ]*/
+.txt1 {
+    font-family: Poppins-Regular;
+    font-size: 13px;
+    line-height: 1.5;
+    color: #999999;
+}
+
+.txt2 {
+    font-family: Poppins-Regular;
+    font-size: 13px;
+    line-height: 1.5;
+    color: #666666;
+}
+
+
+/*//////////////////////////////////////////////////////////////////
+[ header ]*/
+
 .app-header {
     background-color: #352F44;
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 80px;
+    /* height: 80px; */
 }
 
 /* logo */
@@ -81,15 +227,12 @@
     margin: 5px 0;
 }
 
-/* Header Css [End] */
 
 
 
-/* ==================================================
-    
-    app-main
-    
-================================================== */
+/*//////////////////////////////////////////////////////////////////
+[ main ]*/
+
 .app-main {
     width: 100%;
     height: 100%;
@@ -99,8 +242,9 @@
 }
 
 
-
-/* Sidebar Css [Start] */
+/*//////////////////////////////////////////////////////////////////
+[ sidebar ]*/
+ 
 .sidebar {
     width: 15%;
     min-width: 150px;
@@ -150,11 +294,11 @@
     transition: 0.2s;
     border-radius: 10px;
 }
-/* Sidebar Css [End] */
 
 
-
-/* Content Css [Start] */
+/*//////////////////////////////////////////////////////////////////
+[ content ]*/
+ 
 .content-main {
     flex-grow: 1;
 }
@@ -237,12 +381,11 @@
     height: 100px;
     object-fit: contain;
 }
-/* Content Css [End] */
 
 
+/*//////////////////////////////////////////////////////////////////
+[ timeline ]*/
 
-
-/* Timeline Css [Start] */
 .timeline {
     /* background-color: red; */
     width: 100%;
@@ -265,11 +408,6 @@
     border-radius: 5px;
     cursor: pointer;
 }
-/* Timeline Css [End] */
 
-
-/* ==================================================
-    
-    app-footer
-    
-================================================== */
+/*//////////////////////////////////////////////////////////////////
+[ footer ]*/
