--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -43,8 +43,8 @@ body, html {
     font-family: Poppins-Regular, sans-serif;
 }
   
-  /*---------------------------------------------*/
-  a {
+/*---------------------------------------------*/
+a {
     font-family: Poppins-Regular;
     font-size: 14px;
     line-height: 1.7;
@@ -134,6 +134,16 @@ button:hover {
 iframe {
     border: none !important;
 }
+
+select {
+    font-size: small;
+    font-weight: 500;
+    font-family: Poppins-Bold;
+    color: black;
+    border: 0;
+    border-bottom: 1px solid black;
+    /* background-color: rgba(0, 0, 0, 0); */
+}
   
   
 /*//////////////////////////////////////////////////////////////////
@@ -152,84 +162,6 @@ iframe {
     color: #666666;
 }
 
-
-/*//////////////////////////////////////////////////////////////////
-[ header ]*/
-
-.app-header {
-    background-color: #352F44;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    /* height: 80px; */
-}
-
-/* logo */
-.app-header > div.header-left {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    min-width: 300px;
-    padding: 0rem 0rem 0rem 1rem;
-}
-.app-header > div.header-left img {
-    width: 200px;
-    height: 60px;
-    /* margin: 0rem 0rem 0rem 2.2rem; */
-}
-
-/* menu list */
-.app-header > div.header-right {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    flex-grow: 1;
-    padding: 0rem 1rem 0rem 0rem;
-}
-.app-header > div.header-right img {
-    
-}
-
-.app-header ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.app-header ul li {
-    display: flex;
-    align-items: center;
-    margin: 0px 15px 0px 15px;
-    cursor: pointer;
-}
-
-.app-header span {
-    color: #fff;
-    font-size: 1.1rem;
-}
-
-/* .app-header */
-.sandwicth-div-line {
-    border-right: 1px solid #fff;
-    height: 35px;
-}
-
-.sandwich-menu {
-    width: 24px;
-    border: 2px solid #fff;
-    border-width: 2px 0;
-}
-.sandwich-menu:after {
-    content: '';
-    display: block;
-    height: 2px;
-    background-color: #fff;
-    margin: 5px 0;
-}
-
-
-
-
 /*//////////////////////////////////////////////////////////////////
 [ main ]*/
 
@@ -243,71 +175,32 @@ iframe {
 
 
 /*//////////////////////////////////////////////////////////////////
-[ sidebar ]*/
- 
-.sidebar {
-    width: 15%;
-    min-width: 150px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.sidebar > section { margin: 0px 0px 20px 0px; }
-
-.sidebar > section > p {
-    font-size: 1.2rem;
-    font-weight: 900;
-    padding: 0rem 0rem 1rem 0rem;
-    border-bottom: 2px solid #2e364f99;
-    margin: 1rem 2rem 0rem 1.5rem;
-}
-
-.sidebar > section {
-    display: flex;
-    flex-direction: column;
-    /* margin: 0px 30px 0px 0px; */
-}
-
-.sidebar > section > ul {
-    padding: 0;
-}
-
-.sidebar > section > ul > li {
-    padding: 0rem 0.5rem 0.5rem 0.5rem;
-    margin: 0rem 1.5rem 1.3rem 1.5rem;
-    cursor: pointer;
-    position: relative;
-    z-index: 1;
-}
-.sidebar > section > ul > li > span {
-    margin: 0rem 0rem 0rem 0.5rem;
-    font-weight: 700;
-    display: inline;
-    position: relative;
-    z-index: -1;
-}
-#text-underbar {
-    display: none;
-    border: 2px solid black;
-    position: absolute;
-    transition: 0.2s;
-    border-radius: 10px;
-}
-
-
-/*//////////////////////////////////////////////////////////////////
 [ content ]*/
  
-.content-main {
-    flex-grow: 1;
+.home-section{
+    position: relative;
+    background: #E4E9F7;
+    min-height: 100vh;
+    top: 0;
+    left: 78px;
+    width: calc(100% - 78px);
+    transition: all 0.5s ease;
+    z-index: 2;
 }
+.sidebar.open ~ .home-section{
+    left: 250px;
+    width: calc(100% - 250px);
+}
+
+/*//////////////////////////////////////////////////////////////////
+[ calendar ]*/
 
 .calendar {
     width: 100%;
     max-width: 1000px;
     min-width: 150px;
-    margin: 10px 10px;
+    margin-left: 50px;
+    margin-top: 50px;
 }
 .calendar-header {
     width: 100%;
@@ -326,7 +219,7 @@ iframe {
     border: none;
     font-size: 16px;
     font-weight: bold;
-    background-color: #b8b4c5;
+    background-color: #e6e9f6;
 }
 .calendar-content {
     width: 100%;
@@ -343,9 +236,11 @@ iframe {
     cursor: pointer;
 }
 
+/*//////////////////////////////////////////////////////////////////
+[ modal window ]*/
 
 .modal-overlay {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
@@ -355,14 +250,73 @@ iframe {
     align-items: center;
     justify-content: center;
 }
-.modal-content {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    width: 300px;
+.modal {
+    width: calc(80% - 78px);
+    min-width: 750px;
+    height: 50%;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    background: white;
 }
-.modal-content h2 {
+.modal-part {padding: 0 10px;}
+.modal-part:not(:last-child) {margin-bottom: 25px;}
+.modal input {width: 100%; height: 30px;}
+.modal textarea {width: 100%; height: 250px;}
+/* .modal input, .modal textarea {border: 1px solid black;} */
+.modal-header, .modal-footer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+}
+.modal-header button {
+    position: absolute;
+    top: -30px;
+    width: 25px;
+    height: 25px;
+    color: #e6e9f6;
+    font-size: large;
+    font-weight: 600;
+}
+.modal-footer-right button {
+    margin-top: 5px;
+    margin-left: 5px;
+}
+.bxs-message-square-check:before {
+    /* 최초 저장 버튼 */
+    font-size: 35px;
+    color: #02c13a;
+}
+.bxs-message-square-edit:before {
+    /* 수정 버튼 */
+    font-size: 35px;
+    color: #d29d00;
+}
+.bxs-message-square-x:before {
+    /* 취소 버튼 */
+    font-size: 35px;
+    color: #cd0000;
+}
+
+.modal-body {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+}
+
+
+.modal-pic {
+    background-color: #57b846;
+    width: 50%;
+}
+.modal-info {
+    background-color: #98b6cd;
+    width: 50%;
+}
+.sel-date {
+    padding: 5px;
+}
+/* .modal-content h2 {
     margin-top: 0;
 }  
 .modal-content label {
@@ -380,7 +334,7 @@ iframe {
     width: 200px;
     height: 100px;
     object-fit: contain;
-}
+} */
 
 
 /*//////////////////////////////////////////////////////////////////
