--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -202,6 +202,11 @@ input[type="file"] {
     display: none;
 }
 
+.opacity {
+    opacity: 0.5;
+    background-color: rgba(0, 0, 0, 0.09);
+}
+
 /*//////////////////////////////////////////////////////////////////
 [ main ]*/
 
@@ -244,6 +249,7 @@ input[type="file"] {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
 }
 .calendar-header {
     display: flex;
@@ -307,7 +313,7 @@ input[type="file"] {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.85);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -408,28 +414,149 @@ input[type="file"] {
 
 /*//////////////////////////////////////////////////////////////////
 [ timeline ]*/
-
+/* The actual timeline (the vertical ruler) */
 .timeline {
-    /* background-color: red; */
-    width: 100%;
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.timeline * {
+    box-sizing: border-box;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+
+/* Container around content */
+.container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+}
+
+/* The circles on the timeline */
+.container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: white;
+    border: 4px solid #FF9F55;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+    left: 0;
+}
+
+/* Place the container to the right */
+.right {
+    left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+    left: -16px;
+}
+
+/* The actual content */
+.content {
+    padding: 20px 30px;
+    background-color: white;
+    position: relative;
+    border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+    /* Place the timelime to the left */
+    .timeline::after {
+        left: 31px;
+    }
     
-}
-.timeline .picture {
-    /* background-color: aqua; */
+    /* Full-width containers */
+    .container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+    
+    /* Make sure that all arrows are pointing leftwards */
+    .container::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
 
-}
-.timeline .note-title {
-    background-color: #b8b4c5;
-
+    /* Make sure all circles are at the same spot */
+    .left::after, .right::after {
+        left: 15px;
+    }
+    
+    /* Make all right containers behave like the left ones */
+    .right {
+        left: 0%;
+    }
 }
 
 .show-new-log {
-    width: 100%;
-    height: 30px;
-    background-color: #68687d;
-    border: solid 2px black;
-    border-radius: 5px;
-    cursor: pointer;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 50px;
+    height: 50px;
+    background-color: #db6262;
+    margin: 25px 25px;
+    border-radius: 50%;
+    /*-----------------*/
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.5px;
 }
 
 /*//////////////////////////////////////////////////////////////////
