--- a/src/assets/css/analysis.css
+++ b/src/assets/css/analysis.css
@@ -1,5 +1,32 @@
 /*//////////////////////////////////////////////////////////////////
 [ analysis ]*/
+.search-analysis {
+    width: calc(100% - 78px);
+    max-width: 1200px;
+    height: 8%;
+    position: absolute;
+    top: 8%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+    background-color: #fff;
+    /*-----------------------------------------*/
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 20px;
+}
+.search-analysis button {
+    font-size: 13px;
+    font-weight: 600;
+    font-family: system-ui;
+    color: #fff;
+    background-color: #25ad25;
+    width: 50px;
+    padding: 3px;
+    border-radius: 20%;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.6);
+}
 .analysis {
     width: calc(100% - 78px);
     max-width: 1200px;
@@ -12,9 +39,12 @@
     background-color: #fff;
     /*-----------------------------------------*/
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
 }
-.analysis > div:nth-child(3) {
+.analysis > div:nth-child(1) {
     grid-column: 1/3;
+}
+.analysis > div:nth-child(3) {
+    grid-column: 1/4;
 }
