--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -147,7 +147,53 @@ select {
 input[type="file"] {
     display: none;
 }
-  
+
+input[type="date"] {
+    width: 108px;
+    background-image:url("../images/calendar-icon.png");
+    background-repeat: no-repeat;
+    background-size: 18px 18px;
+    background-position: 100%;
+    position: relative;
+    /*-------------------------------------------------*/
+    font-size: 15px;
+    font-weight: 600;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+    width: 100%;
+    height: 85%;
+    position: absolute;
+    top: 0;
+    left: 81%;
+    background: transparent;
+    cursor: pointer;
+}
+
+input[type="month"] {
+    width: 150px;
+    background-color: rgba(0, 0, 0, 0);
+    background-image:url("../images/calendar-icon-white.png");
+    background-repeat: no-repeat;
+    background-size: 25px 25px;
+    background-position: 100%;
+    position: relative;
+    /*-----------------------------------------------------*/
+    font-size: 20px;
+    font-weight: 700;
+    font-family: Poppins-Regular;
+    color: white;
+    margin: 0 20px;
+}
+input[type="month"]::-webkit-calendar-picker-indicator {
+    width: 100%;
+    height: 80%;
+    position: absolute;
+    top: 0;
+    left: 81%;
+    background: transparent;
+    cursor: pointer;
+}
+
 /*//////////////////////////////////////////////////////////////////
 [ Utility ]*/
 .txt1 {
