--- a/src/assets/css/analysis.css
+++ b/src/assets/css/analysis.css
@@ -40,11 +40,14 @@
     /*-----------------------------------------*/
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 50% 50%;
 }
 .analysis > div:nth-child(1) {
     grid-column: 1/3;
 }
 .analysis > div:nth-child(3) {
     grid-column: 1/4;
+}
+.analysis > div {
+    padding: 10px 5px;
 }
