--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -8,7 +8,6 @@
   
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
-  
 @font-face {
     font-family: Poppins-Regular;
     src: url('../fonts/poppins/Poppins-Regular.ttf');
@@ -29,9 +28,8 @@
     src: url('../fonts/montserrat/Montserrat-Bold.ttf'); 
 }
   
-  /*//////////////////////////////////////////////////////////////////
-  [ RESTYLE TAG ]*/
-  
+/*//////////////////////////////////////////////////////////////////
+[ RESTYLE TAG ]*/
 * {
     margin: 0px; 
     padding: 0px; 
@@ -247,15 +245,67 @@ input[type="month"]::-webkit-calendar-picker-indicator {
 .fade {
     display: none;
 }
+.show-f {
+    display: flex;
+}
 
-.opacity {
+.opacity05 {
     opacity: 0.5;
     background-color: rgba(0, 0, 0, 0.09);
 }
 
+.opacity0 {
+    opacity: 0;
+}
+
+.fadein {
+    /* animation : 효과(@keyframes 이름) 동작시간 */
+    animation: fadein 1s;
+}  
+@keyframes fadein {
+    /* 효과를 동작시간 동안 0 ~ 1까지 */
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeout {
+    /* animation : 효과(@keyframes 이름) 동작시간 */
+    animation: fadeout 1s;
+}  
+@keyframes fadeout {
+    /* 효과를 동작시간 동안 0 ~ 1까지 */
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+/*//////////////////////////////////////////////////////////////////
+[ loading-icon ]*/
+.loading-wrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffffad;
+    z-index: 1000;
+}
+.loading-wrap > .bx-loader-alt {
+    height: 50px;
+    font-size: 50px;
+}
+
 /*//////////////////////////////////////////////////////////////////
 [ main ]*/
-
 .app-main {
     width: 100%;
     height: 100%;
@@ -267,7 +317,6 @@ input[type="month"]::-webkit-calendar-picker-indicator {
 
 /*//////////////////////////////////////////////////////////////////
 [ content ]*/
- 
 .home-section{
     position: relative;
     background: #E4E9F7;
