--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -57,8 +57,11 @@
 
 /*------------------------------------------------------------------
 [  ]*/
-.login100-form {
+.login100-form, .acct100-form {
   width: 290px;
+}
+.acct100-form {
+  margin-top: -84px;
 }
 
 .login100-form-title {
@@ -201,7 +204,33 @@
   transition: all 0.4s;
 }
 
-.login100-form-btn:hover {
+.acct100-form-btn {
+  font-family: Montserrat-Bold;
+  font-size: 15px;
+  line-height: 1.5;
+  color: #fff;
+  text-transform: uppercase;
+
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  background: #b84f46;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 25px;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.login100-form-btn:hover, .acct100-form-btn:hover {
   background: #333333;
 }
 
