--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -1,7 +1,7 @@
 /*//////////////////////////////////////////////////////////////////
 [ modal window ]*/
 .modal-overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 2;
 }
 .modal {
     width: calc(80% - 78px);
