--- a/src/assets/css/timeline.css
+++ b/src/assets/css/timeline.css
@@ -19,7 +19,7 @@
     background-color: white;
     top: 0;
     bottom: 0;
-    left: 50%;
+    left: 36%;
     margin-left: -3px;
 }
 
@@ -45,28 +45,9 @@
     z-index: 1;
 }
 
-/* Place the container to the left */
-.left {
-    left: 0;
-}
-
 /* Place the container to the right */
 .right {
-    left: 50%;
-}
-
-/* Add arrows to the left container (pointing right) */
-.left::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    right: 30px;
-    border: medium solid white;
-    border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
+    left: 36%;
 }
 
 /* Add arrows to the right container (pointing left) */
@@ -94,6 +75,9 @@
     background-color: white;
     position: relative;
     border-radius: 6px;
+    cursor: pointer;
+    z-index: 1;
+    margin-top: -70px;
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
@@ -143,4 +127,21 @@
     font-size: 18px;
     font-weight: 600;
     line-height: 1.5px;
+}
+
+.photo-album {
+    position: relative;
+    left: -295px;
+    display: flex;
+    gap: 10px; /* 이미지 간격 */
+}
+.photo-album .img-wrap {
+    width: 70px;
+    height: 70px;
+    border-radius: 10px; /* 모서리 둥글게 */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* 그림자 효과 */
+}
+.photo-album img {
+    width: 100%;
+    height: 100%;
 }
