--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -76,6 +76,18 @@
   padding-bottom: 54px;
 }
 
+.acc100-form-title {
+  font-family: Poppins-Bold;
+  font-size: 24px;
+  color: #333333;
+  line-height: 1.2;
+  text-align: center;
+
+  width: 100%;
+  display: block;
+  padding-bottom: 50px;
+}
+
 
 /*---------------------------------------------*/
 .wrap-input100 {
