--- a/src/assets/css/neighbour.css
+++ b/src/assets/css/neighbour.css
@@ -1,11 +1,105 @@
-.neighbour{
-  position: fixed;
+.neighbor-wrap {
+  display: flex;
+  position: relative;
   left: 0;
   top: 0;
+  width: 100%;
   height: 100%;
-  width: 78px;
-  background: #11101D;
-  padding: 6px 14px;
-  z-index: 99;
-  transition: all 0.5s ease;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
+.neighbor-left {
+  padding: 30px 0;
+  /*------------------------*/
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.neighbor-right {
+  padding: 30px 0;
+  /*------------------------*/
+  background-color: #ca91ff;
+}
+
+@media(min-width: 766px) {
+  .neighbor-wrap {
+    flex-direction: row;
+  }
+  .neighbor-left {
+    flex: 1 1;
+    height: 100%;
+  }
+  .neighbor-right {
+    flex: 1 1;
+    height: 100%;
+  }
+}
+
+@media(max-width: 765px) {
+  .neighbor-wrap {
+    flex-direction: column;
+  }
+  .neighbor-left {
+    width: 100%;
+    height: 700px;
+  }
+  .neighbor-right {
+    width: 100%;
+    height: 700px;
+  }
+}
+
+/*//////////////////////////////////////////////////
+[사용자 검색]*/
+.search-nickname {
+  display: flex;
+  width: 80%;
+  height: 5%;
+  margin: 0 20px 30px 20px;
+  border-radius: 10px;
+  box-shadow: 3px 5px 3px #999999;
+}
+.search-nick-ipt {
+  flex: 1;
+  height: 100%;
+  font-size: 20px;
+  border-radius: 10px 0 0 10px;
+  padding: 0 10px;
+}
+.search-nick-btn {
+  height: 100%;
+  font-size: 16px;
+  border-radius: 0 10px 10px 0;
+  padding: 0 10px;
+  /*------------------------*/
+  background: #b621fe;
+  color: #fff;
+}
+
+/*//////////////////////////////////////////////////
+[이웃친구 목록]*/
+.neighbor-list {
+  width: 80%;
+  flex: 1;
+  background-color: cadetblue;
+}
+.neighbor-list > div {
+  display: flex;
+  justify-content: center;
+  margin: 10px 10px;
+}
+input.search-list-follower {
+  width: 100%;
+  font-size: 20px;
+  padding: 5px 5px;
+}
+
+.neighbor-list ul {
+
+}
+.neighbor-list ul li {
+
 }
