--- a/src/assets/css/neighbour.css
+++ b/src/assets/css/neighbour.css
@@ -111,7 +111,6 @@ input.search-follower-list {
 }
 .chat-msg-box {
   width: 100%;
-  height: 92%;
   padding: 30px;
   overflow-y: auto;
 }
@@ -119,9 +118,8 @@ div.chat-input {
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 8%;
 }
-div.chat-input input {
+div.chat-input #myMsg {
   width: 90%;
   height: 100%;
   padding: 10px;
@@ -130,8 +128,9 @@ div.chat-input input {
   font-family: Arial, Helvetica, sans-serif;
   border-radius: 0 0 0 10px;
   border-top: 1px solid #afafaf;
+  resize: none;
 }
-div.chat-input input:focus {
+div.chat-input #myMsg:focus {
   outline: 1px solid #999999;
 }
 div.chat-input button {
@@ -153,7 +152,6 @@ div.chat-input button {
 }
 .chat-left > span, .chat-right > span {
   max-width: calc(100% - 50px);
-  min-width: 200px;
   white-space:normal;
   word-break:normal;
   word-wrap: break-word;
@@ -183,6 +181,12 @@ div.chat-input button {
   .neighbor-list > article {
     height: 566px;
   }
+  .chat-msg-box { 
+    height: 646px;
+  }
+  div.chat-input { 
+    height: 58px;
+  }
 }
 
 @media(max-width: 765px) {
@@ -200,5 +204,11 @@ div.chat-input button {
 
   .neighbor-list > article {
     height: 505px;
+  }
+  .chat-msg-box { 
+    height: 586px;
+  }
+  div.chat-input { 
+    height: 52px;
   }
 }
