--- a/src/assets/css/neighbour.css
+++ b/src/assets/css/neighbour.css
@@ -25,8 +25,8 @@
 .search-nickname {
   display: flex;
   width: 80%;
-  height: 5%;
-  margin: 0 20px 30px 20px;
+  height: 6%;
+  margin: 0 20px 20px 20px;
   border-radius: 10px;
   box-shadow: 3px 5px 3px #999999;
 }
@@ -54,8 +54,9 @@
   display: flex;
   flex-direction: column;
   width: 80%;
-  flex: 1;
-  background-color: #bcd6d7;
+  flex: 1 1;
+  background-color: #fff;
+  border: 2px solid #bcd6d7;
   border-radius: 10px;
 }
 
@@ -64,10 +65,19 @@
   justify-content: center;
   margin: 10px 10px;
 }
+.neighbor-list > section > button {
+  border-radius: 5px;
+  background-color: black;
+}
 input.search-follower-list {
   width: 100%;
   font-size: 20px;
   padding: 5px 5px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+input.search-follower-list:focus {
+  outline: 1px solid black;
 }
 
 .neighbor-list > article {
@@ -104,10 +114,11 @@ input.search-follower-list {
   width: 50px;
   height: 50px;
   border-radius: 35%;
+  margin-right: 5px;
 }
 .noting { background-color: #fd89895e; }
 .waiting { background-color: #feff9e; }
-.approval { background-color: #f7fae66b; }
+.approval { background-color: #f7fae6; }
 
 .neighbor-list-footer {
   justify-content: center;
