--- a/src/assets/css/neighbour.css
+++ b/src/assets/css/neighbour.css
@@ -19,6 +19,16 @@
   align-items: center;
 }
 
+.modal-calendar {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: #fff;
+}
+
 
 /*//////////////////////////////////////////////////
 [사용자 검색]*/
