--- a/src/assets/css/dailyLogSearch.css
+++ b/src/assets/css/dailyLogSearch.css
@@ -3,6 +3,26 @@
 
 #DailyLogSearch {
     width: 100%;
-    height: 50px;
-    background-color: gray;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#DailyLogSearch input {
+    width: 500px;
+    height: 40px;
+    border-radius: 5px;
+    padding: 0 10px 0 40px;
+
+    font-size: 15px;
+    font-weight: 700;
+    color: #636363;
+}
+
+#DailyLogSearch i {
+    position: relative;
+    left: 30px;
+    font-size: 20px;
+    font-weight: 900;
 }
