--- a/src/assets/css/timeline.css
+++ b/src/assets/css/timeline.css
@@ -4,113 +4,79 @@
 .timeline {
     position: relative;
     max-width: 1200px;
+    min-width: 500px; /*775*/
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .timeline * {
     box-sizing: border-box;
 }
 
-/* The actual timeline (the vertical ruler) */
-.timeline::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    background-color: white;
-    top: 0;
-    bottom: 0;
-    left: 36%;
-    margin-left: -3px;
-}
-
 /* Container around content */
 .container {
-    padding: 10px 40px;
-    position: relative;
+    display: flex;
+    flex-direction: row;
     background-color: inherit;
-    width: 50%;
+    width: 845px;
 }
-
-/* The circles on the timeline */
+/* The actual timeline (the vertical ruler) */
 .container::after {
     content: '';
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    right: -17px;
+    position: relative;
+    width: 6px;
+    height: 128.8px;
     background-color: white;
-    border: 4px solid #FF9F55;
-    top: 15px;
-    border-radius: 50%;
-    z-index: 1;
+    left: -59%;
 }
 
-/* Place the container to the right */
-.right {
-    left: 36%;
+/* The actual content */
+.content {
+    width: 455px;
+    height: 108px;
+    margin: 10px 0 10px 0;
+    padding: 10px 30px;
+    background-color: white;
+    border-radius: 6px;
+    cursor: pointer;
 }
-
-/* Add arrows to the right container (pointing left) */
-.right::before {
+.content::after {
     content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
+    display: flex;
     width: 0;
+    height: 0;
+    position: relative;
+    top: -52px;
+    left: -39px;
     z-index: 1;
-    left: 30px;
     border: medium solid white;
     border-width: 10px 10px 10px 0;
     border-color: transparent white transparent transparent;
 }
 
-/* Fix the circle for containers on the right side */
-.right::after {
-    left: -16px;
-}
-
-/* The actual content */
-.content {
-    padding: 20px 30px;
-    background-color: white;
-    position: relative;
-    border-radius: 6px;
-    cursor: pointer;
-    z-index: 1;
-    margin-top: -76px;
-}
-
 /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
-    /* Place the timelime to the left */
-    .timeline::after {
-        left: 31px;
-    }
+@media screen and (max-width: 945px) {
     
     /* Full-width containers */
     .container {
-        width: 100%;
-        padding-left: 70px;
-        padding-right: 25px;
+        width: 500px;
     }
-    
-    /* Make sure that all arrows are pointing leftwards */
-    .container::before {
-        left: 60px;
-        border: medium solid white;
-        border-width: 10px 10px 10px 0;
-        border-color: transparent white transparent transparent;
+    .container::after {
+        left: -230px;
     }
 
-    /* Make sure all circles are at the same spot */
-    .left::after, .right::after {
-        left: 15px;
+    .content {
+        width: 187px;
+        margin: 10px 0 10px 0;
+        padding: 5px 15px;
     }
-    
-    /* Make all right containers behave like the left ones */
-    .right {
-        left: 0%;
+    .content::after {
+        top: -40px;
+        left: -25px;
     }
+
 }
 
 .show-new-log {
@@ -130,14 +96,30 @@
 }
 
 .photo-album {
-    position: relative;
-    left: -295px;
     display: flex;
-    gap: 10px; /* 이미지 간격 */
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    margin: 0 60px 0 0;
 }
 .photo-album img {
     width: 70px;
     height: 76px;
     border-radius: 10px; /* 모서리 둥글게 */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* 그림자 효과 */
+}
+
+/* The circles on the timeline */
+.photo-album::after {
+    content: '';
+    width: 25px;
+    height: 25px;
+    position: relative;
+    left: 35px;
+    top: -20px;
+    background-color: white;
+    border: 4px solid #FF9F55;
+    border-radius: 50%;
+    z-index: 1;
+    margin-left: -25px;
 }
